--- a/Baha'i/Others/ROB/V2/p029-054Ch02.html
+++ b/Baha'i/Others/ROB/V2/p029-054Ch02.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p001-028Ch01.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p055-064Ch03.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -48,7 +48,7 @@
 	   In one of His Tablets,<small><sup>1</sup></small> Bahá'u'lláh states that the primary purpose of divine revelation is not merely the changing of laws in human society nor is it to impart knowledge; but rather, its purpose is to pour forth heavenly bounties so that at the time of divine revelation all created things may become the instruments of the grace of God and acquire fresh capacities.<p>
 	   When the <i>Mathnaví</i> was revealed the news of the Declaration of Bahá'u'lláh and its significance had not been fully communicated to the Bábí Community. Therefore Bahá'u'lláh calls on Himself in this poem to rend asunder the veils and let the sun of His Revelation arise in full splendour. In another passage He calls on Himself to shed upon this dark world a measure of His light, to open the doors of the knowledge of God to humanity, and to waft over them the musk-laden breezes of His mercy so that the spiritually dead may be resurrected from their sepulchres of ignorance and heedlessness.<p>
 	   Alluding to the diffusion of the light of His Faith to the Western world, Bahá'u'lláh makes a remarkable statement. He urges the innermost spirit of God within Himself to unveil His glory so that the Sun may rise from the West. Elsewhere in His writings, Bahá'u'lláh has prophesied that although the Cause of God was born in the East, its influence would appear in the West.*<p>
-	   In the <i>Mathnaví</i> Bahá'u'lláh describes His coming as the advent of the Day of God and the appearance of springtime. In many of His Tablets He has referred to this theme. Just as the physical spring gives new life to all creation in this world, so the Revelation of Bahá'u'lláh enables the hearts of men to be filled with His love and to manifest the noblest fruits of virtues and perfections. These heavenly qualities manifested by the believer do not originate entirely from himself. Without
+	   In the <i>Mathnaví</i> Bahá'u'lláh describes His coming as the advent of the Day of God and the appearance of springtime. In many of His Tablets He has referred to this theme. Just as the physical spring gives new life to all creation in this world, so the Revelation of Bahá'u'lláh enables the hearts of men to be filled with His love and to manifest the noblest fruits of virtues and perfections. These heavenly qualities manifested by the believer do not originate entirely from himself. Without 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p30">30</a></center><p>
@@ -153,7 +153,7 @@
 	   † Worship of God is not only through prayer and devotion. Bahá'u'lláh has ordained that work performed in the spirit of service to mankind is also to be regarded as worship.<p>
 	   <hr>
 	   9. Bahá'u'lláh, <i>The Hidden Words</i>, no. <a href="../../../Baha/HiddenWords.html#arabic4">4</a>, Arabic.<p>
-	   10. Bahá'u'lláh, <i>Prayers and Meditations</i>, clxxxi.<p>
+	   10. Bahá'u'lláh, <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para984">clxxxi</a>.<p>
 	   11. Quoted in <i>Synopsis and Codification of the Kitáb-i-Aqdas</i>, p. 12.<p>
 	   <hr>
 	   ["Observe My commandments..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para4">&para;4</a>
@@ -213,7 +213,7 @@
 	   lláh, demonstrated this form of detachment by His actions. Throughout His life, He never wished to exalt His name nor did He seek publicity for Himself. For instance, He had an immense dislike of being photographed. He said'...to have a picture of oneself is to emphasize the personality...' <small><sup>15</sup></small> During the first few days of His visit to London, He refused to be photographed. However, as a result of much pressure by the newspaper reporters, and persistent pleas by the friends to take His photograph, 'Abdu'l-Bahá acquiesced in order to make them happy.<p>
 	   The exalted titles which were conferred upon Him by Bahá'u'lláh were indicative of 'Abdu'l-Bahá's lofty station. Yet 'Abdu'l-Bahá never applied them to Himself. Instead, after the ascension of Bahá'u'lláh, He took the title of 'Abdu'l-Bahá (Servant of Bahá) and urged the believers to call Him only by this name. True servitude at the threshold of Bahá'u'lláh was all he prized. These are some of His words as He describes with utter self-effacement the reality of His station:<p>
 	   <blockquote>My name is 'Abdu'l-Bahá. My qualification is 'Abdu'l-Bahá. My reality is 'Abdu'l-Bahá. My praise is 'Abdu'l-Bahá. Thraldom to the Blessed Perfection* is my glorious and refulgent diadem, and servitude to all the human race my perpetual religion...No name, no title, no mention, no commendation have I, nor will ever have, except 'Abdu'l-Bahá. This is my longing. This is my greatest yearning. This is my eternal life. This is my everlasting glory.<small><sup>16</sup></small><p></blockquote>
-	   One of the distinguishing features of Bahá'u'lláh's embryonic world order is that it does not harbour egotistical personalities. Bahá'u'lláh has conferred authority on its institutions, whether local, national or international. But the individuals who are privileged to serve on them are devoid of any authority. Unlike men who wield power in the world today and seek to acquire fame and popularity, members of Bahá'í institutions cannot but manifest humility and self-effacement if they are to
+	   One of the distinguishing features of Bahá'u'lláh's embryonic world order is that it does not harbour egotistical personalities. Bahá'u'lláh has conferred authority on its institutions, whether local, national or international. But the individuals who are privileged to serve on them are devoid of any authority. Unlike men who wield power in the world today and seek to acquire fame and popularity, members of Bahá'í institutions cannot but manifest humility and self-effacement if they are to 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p41">41</a></center><p>
@@ -416,7 +416,7 @@
 	   When Bahá'u'lláh was in Baghdád a certain Mírzá Muhít-i-Kirmání, a Shaykhí who had attained the presence of the Báb and whose attitude towards the Faith was that of concealed opposition, sent a message to Bahá'u'lláh through Prince Kayván Mírzá. He requested a confidential interview with Bahá'u'lláh late at night so that no one except the Prince would know about it. The reason given for this secrecy was that, should the meeting become public knowledge, the position of Mírzá Muhít in the Muslim community would be undermined. Bahá'u'lláh asked the Prince to share with him two lines of an ode He had composed while in Kurdistán, setting forth the conditions for those who wish to partake of His glory. These are the lines:<p>
 	   <blockquote>If thine aim be to cherish thy life, approach not our court; but if sacrifice be thy heart's desire, come and let others come with thee. For such is the way of Faith, if in thy heart thou seekest reunion with Bahá; shouldst thou refuse to tread this path, why trouble us? Begone!<p></blockquote>
 	   Bahá'u'lláh is reported to have said to the Prince, 'If he be willing, he will openly and unreservedly hasten to meet Me; if not I refuse to see him.' <small><sup>26</sup></small><p>
-	   When Mírzá Muhít heard this, he did not find the courage to go and meet Bahá'u'lláh. A few days later he died.<p>
+	   When Mírzá Muhít heard this, he did not find the courage to go and meet Bahá'u'lláh. A few days later he died.<p> 
 	   Bahá'u'lláh touches upon several other subjects and reveals many mysteries in the <i>Mathnaví</i> which are beyond the scope of this work. Indeed this soul-stirring poem is a marvellous depository of divine wisdom, which it is impossible to exhaust.
 	   </td>
        <td></td>
@@ -432,7 +432,7 @@
        <td>
 	   	   <FORM ACTION="p001-028Ch01.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -440,12 +440,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p055-064Ch03.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
