--- a/Baha'i/Others/ROB/V2/p107-136Ch05.html
+++ b/Baha'i/Others/ROB/V2/p107-136Ch05.html
@@ -128,6 +128,8 @@
 	   † Not to be taken as the exact words of Bahá'u'lláh. However, they convey the sense of what He said. (A.T.)<p>
 	   <hr>
 	   3. A report by the Bahá'í community of 'Ishqábád, quoted by Ishráq Khávarí in <i>Muhádirát</i>, p. 653 ff.
+	   <hr>
+	   [Naw-Rúz] <i><a href="../../../Baha/KA/p258-296Index.html#Naw-Rúz">The Kitáb-i-Aqdas</a></i>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para225">p. 67</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="../V1/p351-363Index.html#Naw-Rúz">1</a>, <a href="../V2/p469-476Index.html#Naw-Rúz">2</a>, <a href="../V3/p467-483Index.html#Naw-Rúz">3</a>, <a href="../V4/p463-485Index.html#Naw-Rúz">4</a><p>
 	   </small></td>
 </tr>
 <tr>
