--- a/Baha'i/Others/ROB/V2/p171-193Ch08.html
+++ b/Baha'i/Others/ROB/V2/p171-193Ch08.html
@@ -269,7 +269,7 @@
 	   <hr>
 	   11. Bahá'u'lláh, quoted in <i>The Proclamation of Bahá'u'lláh</i>, p. 93. <p>
 	   12. <i>ibid</i>., p. 27.<p>
-	   13. Bahá'u'lláh, <i>Prayers and Meditations</i>, clxxxiii.
+	   13. Bahá'u'lláh, <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para1021">clxxxiii</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -297,7 +297,7 @@
 	   <hr>
 	   15. Bahá'u'lláh, quoted in <i>Synopsis and Codification of the Laws and Ordinances of the Kitáb-i-Aqdas</i>, p. 11.<p>
 	   <hr>
-	   ["The first duty..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para1">&para;1</a>, <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#CLV">CLV</a>, <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../V3/p275-307Ch13.html#p292">p. 292</a>
+	   ["The first duty..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para1">&para;1</a>, <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#CLV">CLV</a>, <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../V3/p275-307Ch13.html#p292">p. 292</a> 
 	   </small></td>
 </tr>
 <tr>
