--- a/Baha'i/Others/ROB/V2/p301-336Ch15.html
+++ b/Baha'i/Others/ROB/V2/p301-336Ch15.html
@@ -6,7 +6,7 @@ p 321 changed
   	  	How many those who every year
 	  to
 	  	How many those who, every year
-
+		
 p 324 incorrect quote (did not correct it)
 		  It is not Our purpose in addressing thee
 		  It is not Our purpose in addressing to thee (from Gleanings)
@@ -106,7 +106,7 @@ p 324 incorrect quote (did not correct it)
        <td VALIGN=top><small><center><a name="p304">304</a></center><p>
 	   <hr>
 	   <hr>
-	   ["O kings of the earth..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para78">&para;78</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#CV">CV</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../V3/p147-173Ch08.html">chapter 8</a><p>
+	   ["O kings of the earth..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para78">&para;78</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#CV">CV</a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para129">p. 36</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../V3/p147-173Ch08.html">chapter 8</a><p>
 	   ["Ye are but vassals..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para82">&para;82</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para428">CV</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../V3/p147-173Ch08.html#p148">p. 148</a>
 	   </small></td>
 </tr>
