--- a/Baha'i/Others/ROB/V2/p451-454Biblio.html
+++ b/Baha'i/Others/ROB/V2/p451-454Biblio.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p438-450Apndx_III.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p455-468Refs.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -57,7 +57,7 @@
 	   <i>Iqtidárát</i>. A compilation of the Tablets of Bahá'u'lláh. 1310 A.H. (A.D. 1892-3).<p>
 	   <i><a href="../../../Baha/KI/Cover.html">The Kitáb-i-Íqán. The Book of Certitude</a></i>. Trans. by Shoghi Effendi. Wilmette, Illinois: Bahá'í Publishing Trust, 1931; 2nd edn. 1950. London: Bahá'í Publishing Trust, 2nd edn. 1961.<p>
 	   <i>Majmú'iy-i-Alváh</i>. A compilation of the Tablets of Bahá'u'lláh. Cairo, 1920.<p>
-	   <i>Prayers and Meditations of Bahá'u'lláh</i>. Compiled and trans. by Shoghi Effendi. New York: Bahá'í Publishing Committee, 1938. Reprinted Wilmette, Illinois: Bahá'í Publishing Trust. London: Bahá'í Publishing Trust, 1957.<p>
+	   <i><a href="../../../Baha/PM/Cover.html">Prayers and Meditations of Bahá'u'lláh</a></i>. Compiled and trans. by Shoghi Effendi. New York: Bahá'í Publishing Committee, 1938. Reprinted Wilmette, Illinois: Bahá'í Publishing Trust. London: Bahá'í Publishing Trust, 1957.<p>
 	   <i>The Proclamation of Bahá'u'lláh</i> to the kings and leaders of the World. Haifa: Bahá'í World Centre, 1967.<p>
 	   </blockquote>
 	   BAYDÁ'Í, NI'MATU'LLÁH. <i>Tadhkiriy-i-Shu'aráy-i-Qarn-i-Avval-i-Bahá'í</i>. (Memorials of the Poets of the First Bahá'í Century). 4 Vols. Tihrán: Bahá'í Publishing Trust, 123 B.E. (A.D. 1966).<p>
@@ -113,7 +113,7 @@
        <td>
 	   	   <FORM ACTION="p438-450Apndx_III.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -121,12 +121,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p455-468Refs.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
