--- a/Baha'i/Others/ROB/V2/p065-106Ch04.html
+++ b/Baha'i/Others/ROB/V2/p065-106Ch04.html
@@ -148,7 +148,9 @@ P. 97, replaced Gleanings reference from clxiii to CLXIV
 	   * Jináb-i-Muníb. (A.T.)<p>
 	   † Bahá'u'lláh.
 	   <hr>
-	   3. Hájí Mírzá Haydar-'Alí, <i>Bihjatu's-Sudúr</i>, p. 23 ff.<br>
+	   3. Hájí Mírzá Haydar-'Alí, <i>Bihjatu's-Sudúr</i>, p. 23 ff.
+	   <hr>
+	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a>
 	   </small></td>
 </tr>
 <tr>
