--- a/Baha'i/Others/ROB/V2/p397-421Ch19.html
+++ b/Baha'i/Others/ROB/V2/p397-421Ch19.html
@@ -40,7 +40,12 @@
 	   The revelation of so many important Tablets, and the proclamation of Bahá'u'lláh's Message to the kings and rulers of the world, had endowed the Faith with such ascendancy that by the summer of 1868 the authorities in Constantinople had become apprehensive of its rising prestige and power. The exaggerated reports and calumnies of Siyyid Muhammad and his accomplice Áqá Ján together with further representations
 	   </td>
        <td></td>
-       <td VALIGN=top><small><center><a name="p397">397</a></center><p></small></td>
+       <td VALIGN=top><small><center><a name="p397">397</a></center><p>
+	   <hr>
+	   <hr>
+	   [Fast] <a href="../../../Baha/KA/p258-296Index.html#Fasting"><i>The Kitáb-i-Aqdas</i></a>; <i>The Kitáb-i-Íqán</i>, <a href="../../../Baha/KI/p001-094.html#para39">p. 39</a>-40; <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para313">p. 109</a>; <a href="../../../Baha/PM/Index.html#Fast"><i>Prayers and Meditations</i></a>; <a href="../../../Baha/GL/Index.html#Fast"><i>Gleanings From The Writings Of Bahá'u'lláh</i></a>; <i>The Revelation of Bahá'u'lláh</i>, <a href="../V3/p467-483Index.html#Fasting">vol. 3</a>, vol. 4 <a href="../V4/p001-010Ch01.html#p9">p. 9</a><p>
+	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a>
+	   </small></td>
 </tr>
 <tr>
        <td>
